# amp-showcase-financial-services-your-own-data

./: pyproject.toml
src/finserv_payload/: crew.py  lookup.py  main.py  surface.py  trace.py
src/finserv_your_own_data/: cost.py  crew.py  lookup.py  main.py  surface.py  trace.py
src/finserv_your_own_data/data/: companies.json
