[project]
name = "finserv-your-own-data"
version = "0.1.0"
description = "FinServ Run It on Your Own Data — enrich your own counterparty, read a cost-annotated trace."
requires-python = ">=3.10"
dependencies = [
    "crewai[anthropic]>=1.14.7,<2",
]

[project.scripts]
kickoff = "finserv_your_own_data.main:kickoff"

[tool.crewai]
type = "flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finserv_your_own_data"]
